src/main/java/parser/FProgramParser.java
// Generated from /home/alex/IdeaProjects/MT3/src/main/antlr/FProgram.g4 by ANTLR 4.7.2
package main.java.parser;

import main.java.expression.*;
import main.java.expression.logical.*;
import main.java.expression.arithmetic.*;
import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FProgramParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TYPE=1, ASSIGN=2, LPAR=3, RPAR=4, COLON2=5, PIPE=6, COMMA=7, ADD=8, SUB=9, 
		MUL=10, DIV=11, MOD=12, EQ=13, NEQ=14, LESS=15, GR=16, LESSEQ=17, GREQ=18, 
		ARROW=19, NOT=20, AND=21, OR=22, NAME=23, NUM=24, NEWLINE=25, WS=26, WhiteSpace=27, 
		NL=28;
	public static final int
		RULE_start = 0, RULE_program = 1, RULE_func = 2, RULE_var = 3, RULE_add_sub = 4, 
		RULE_mul_div = 5, RULE_unary_ar = 6, RULE_or = 7, RULE_and = 8, RULE_unary_logic = 9, 
		RULE_cmp = 10, RULE_cmp_op = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "program", "func", "var", "add_sub", "mul_div", "unary_ar", 
			"or", "and", "unary_logic", "cmp", "cmp_op"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'='", "'('", "')'", "'::'", "'|'", "','", "'+'", "'-'", 
			"'*'", "'/'", "'%'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'->'", 
			"'!'", "'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TYPE", "ASSIGN", "LPAR", "RPAR", "COLON2", "PIPE", "COMMA", "ADD", 
			"SUB", "MUL", "DIV", "MOD", "EQ", "NEQ", "LESS", "GR", "LESSEQ", "GREQ", 
			"ARROW", "NOT", "AND", "OR", "NAME", "NUM", "NEWLINE", "WS", "WhiteSpace", 
			"NL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FProgram.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FProgramParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public FProgram p;
		public ProgramContext program;
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FProgramListener ) ((FProgramListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FProgramListener ) ((FProgramListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			((StartContext)_localctx).program = program();
			((StartContext)_localctx).p =  new FProgram(((StartContext)_localctx).program.f);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public List <Function> f;
		public FuncContext func;
		public List<FuncContext> func() {
			return getRuleContexts(FuncContext.class);
		}
		public FuncContext func(int i) {
			return getRuleContext(FuncContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FProgramListener ) ((FProgramListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FProgramListener ) ((FProgramListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);

		        List<Function> res = new ArrayList<>();
		    
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27);
			((ProgramContext)_localctx).func = func();
			 res.add(((ProgramContext)_localctx).func.f); 
			setState(34);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NAME) {
				{
				{
				setState(29);
				((ProgramContext)_localctx).func = func();
				 res.add(((ProgramContext)_localctx).func.f); 
				}
				}
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 ((ProgramContext)_localctx).f =  res; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncContext extends ParserRuleContext {
		public Function f;
		public Token NAME;
		public Token TYPE;
		public VarContext var;
		public OrContext or;
		public Add_subContext add_sub;
		public TerminalNode NAME() { return getToken(FProgramParser.NAME, 0); }
		public TerminalNode COLON2() { return getToken(FProgramParser.COLON2, 0); }
		public List<TerminalNode> TYPE() { return getTokens(FProgramParser.TYPE); }
		public TerminalNode TYPE(int i) {
			return getToken(FProgramParser.TYPE, i);
		}
		public List<TerminalNode> ARROW() { return getTokens(FProgramParser.ARROW); }
		public TerminalNode ARROW(int i) {
			return getToken(FProgramParser.ARROW, i);
		}
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public List<TerminalNode> ASSIGN() { return getTokens(FProgramParser.ASSIGN); }
		public TerminalNode ASSIGN(int i) {
			return getToken(FProgramParser.ASSIGN, i);
		}
		public List<Add_subContext> add_sub() {
			return getRuleContexts(Add_subContext.class);
		}
		public Add_subContext add_sub(int i) {
			return getRuleContext(Add_subContext.class,i);
		}
		public List<TerminalNode> PIPE() { return getTokens(FProgramParser.PIPE); }
		public TerminalNode PIPE(int i) {
			return getToken(FProgramParser.PIPE, i);
		}
		public List<OrContext> or() {
			return getRuleContexts(OrContext.class);
		}
		public OrContext or(int i) {
			return getRuleContext(OrContext.class,i);
		}
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FProgramListener ) ((FProgramListener)listener).enterFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FProgramListener ) ((FProgramListener)listener).exitFunc(this);
		}
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_func);

		            Function res;
		            LogicExpression c = null;
		            
		int _la;
		try {
			setState(84);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(39);
				((FuncContext)_localctx).NAME = match(NAME);
				setState(40);
				match(COLON2);
				 res = new Function((((FuncContext)_localctx).NAME!=null?((FuncContext)_localctx).NAME.getText():null)); 
				setState(42);
				((FuncContext)_localctx).TYPE = match(TYPE);
				 List<String> types = new ArrayList<>(); 
				 types.add(new String((((FuncContext)_localctx).TYPE!=null?((FuncContext)_localctx).TYPE.getText():null))); 
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ARROW) {
					{
					{
					setState(45);
					match(ARROW);
					setState(46);
					((FuncContext)_localctx).TYPE = match(TYPE);
					 types.add(new String((((FuncContext)_localctx).TYPE!=null?((FuncContext)_localctx).TYPE.getText():null))); 
					}
					}
					setState(52);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				 res.addTypes(types); 
				 ((FuncContext)_localctx).f =  res; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				((FuncContext)_localctx).NAME = match(NAME);
				 res = new Function((((FuncContext)_localctx).NAME!=null?((FuncContext)_localctx).NAME.getText():null));           
				 List<String> vars = new ArrayList<>();    
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NAME || _la==NUM) {
					{
					{
					setState(58);
					((FuncContext)_localctx).var = var();
					 vars.add(((FuncContext)_localctx).var.v);     
					}
					}
					setState(65);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				 res.addVars(vars);        
				setState(78); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					 c = null; 
					setState(72);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==PIPE) {
						{
						setState(68);
						match(PIPE);
						setState(69);
						((FuncContext)_localctx).or = or(0);
						 c = ((FuncContext)_localctx).or.v; 
						}
					}

					setState(74);
					match(ASSIGN);
					setState(75);
					((FuncContext)_localctx).add_sub = add_sub(0);
					 res.addFunc(c, ((FuncContext)_localctx).add_sub.v); 
					}
					}
					setState(80); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==ASSIGN || _la==PIPE );
				 ((FuncContext)_localctx).f =  res; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public String v;
		public Token NUM;
		public Token NAME;
		public TerminalNode NUM() { return getToken(FProgramParser.NUM, 0); }
		public TerminalNode NAME() { return getToken(FProgramParser.NAME, 0); }
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FProgramListener ) ((FProgramListener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FProgramListener ) ((FProgramListener)listener).exitVar(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var);
		try {
			setState(90);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUM:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				((VarContext)_localctx).NUM = match(NUM);
				 ((VarContext)_localctx).v =  (((VarContext)_localctx).NUM!=null?((VarContext)_localctx).NUM.getText():null); 
				}
				break;
			case NAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				((VarContext)_localctx).NAME = match(NAME);
				 ((VarContext)_localctx).v =  (((VarContext)_localctx).NAME!=null?((VarContext)_localctx).NAME.getText():null); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Add_subContext extends ParserRuleContext {
		public ArithmeticExpression v;
		public Add_subContext l;
		public Mul_divContext mul_div;
		public Mul_divContext r;
		public Mul_divContext mul_div() {
			return getRuleContext(Mul_divContext.class,0);
		}
		public TerminalNode ADD() { return getToken(FProgramParser.ADD, 0); }
		public Add_subContext add_sub() {
			return getRuleContext(Add_subContext.class,0);
		}
		public TerminalNode SUB() { return getToken(FProgramParser.SUB, 0); }
		public Add_subContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add_sub; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FProgramListener ) ((FProgramListener)listener).enterAdd_sub(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FProgramListener ) ((FProgramListener)listener).exitAdd_sub(this);
		}
	}

	public final Add_subContext add_sub() throws RecognitionException {
		return add_sub(0);
	}

	private Add_subContext add_sub(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Add_subContext _localctx = new Add_subContext(_ctx, _parentState);
		Add_subContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_add_sub, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(93);
			((Add_subContext)_localctx).mul_div = mul_div(0);
			 ((Add_subContext)_localctx).v =  ((Add_subContext)_localctx).mul_div.v; 
			}
			_ctx.stop = _input.LT(-1);
			setState(108);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(106);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
					case 1:
						{
						_localctx = new Add_subContext(_parentctx, _parentState);
						_localctx.l = _prevctx;
						_localctx.l = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_add_sub);
						setState(96);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(97);
						match(ADD);
						setState(98);
						((Add_subContext)_localctx).r = ((Add_subContext)_localctx).mul_div = mul_div(0);
						 ((Add_subContext)_localctx).v =  new BinaryArithmeticExpression("+", ((Add_subContext)_localctx).l.v, ((Add_subContext)_localctx).r.v); 
						}
						break;
					case 2:
						{
						_localctx = new Add_subContext(_parentctx, _parentState);
						_localctx.l = _prevctx;
						_localctx.l = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_add_sub);
						setState(101);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(102);
						match(SUB);
						setState(103);
						((Add_subContext)_localctx).r = ((Add_subContext)_localctx).mul_div = mul_div(0);
						 ((Add_subContext)_localctx).v =  new BinaryArithmeticExpression("-", ((Add_subContext)_localctx).l.v, ((Add_subContext)_localctx).r.v); 
						}
						break;
					}
					} 
				}
				setState(110);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Mul_divContext extends ParserRuleContext {
		public ArithmeticExpression v;
		public Mul_divContext l;
		public Unary_arContext unary_ar;
		public Unary_arContext unary_ar() {
			return getRuleContext(Unary_arContext.class,0);
		}
		public TerminalNode MUL() { return getToken(FProgramParser.MUL, 0); }
		public Mul_divContext mul_div() {
			return getRuleContext(Mul_divContext.class,0);
		}
		public TerminalNode DIV() { return getToken(FProgramParser.DIV, 0); }
		public TerminalNode MOD() { return getToken(FProgramParser.MOD, 0); }
		public Mul_divContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mul_div; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FProgramListener ) ((FProgramListener)listener).enterMul_div(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FProgramListener ) ((FProgramListener)listener).exitMul_div(this);
		}
	}

	public final Mul_divContext mul_div() throws RecognitionException {
		return mul_div(0);
	}

	private Mul_divContext mul_div(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Mul_divContext _localctx = new Mul_divContext(_ctx, _parentState);
		Mul_divContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_mul_div, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(112);
			((Mul_divContext)_localctx).unary_ar = unary_ar();
			 ((Mul_divContext)_localctx).v =  ((Mul_divContext)_localctx).unary_ar.v; 
			}
			_ctx.stop = _input.LT(-1);
			setState(132);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(130);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						_localctx = new Mul_divContext(_parentctx, _parentState);
						_localctx.l = _prevctx;
						_localctx.l = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_mul_div);
						setState(115);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(116);
						match(MUL);
						setState(117);
						((Mul_divContext)_localctx).unary_ar = unary_ar();
						 ((Mul_divContext)_localctx).v =  new BinaryArithmeticExpression("*", ((Mul_divContext)_localctx).l.v, ((Mul_divContext)_localctx).unary_ar.v); 
						}
						break;
					case 2:
						{
						_localctx = new Mul_divContext(_parentctx, _parentState);
						_localctx.l = _prevctx;
						_localctx.l = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_mul_div);
						setState(120);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(121);
						match(DIV);
						setState(122);
						((Mul_divContext)_localctx).unary_ar = unary_ar();
						 ((Mul_divContext)_localctx).v =  new BinaryArithmeticExpression("/", ((Mul_divContext)_localctx).l.v, ((Mul_divContext)_localctx).unary_ar.v); 
						}
						break;
					case 3:
						{
						_localctx = new Mul_divContext(_parentctx, _parentState);
						_localctx.l = _prevctx;
						_localctx.l = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_mul_div);
						setState(125);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(126);
						match(MOD);
						setState(127);
						((Mul_divContext)_localctx).unary_ar = unary_ar();
						 ((Mul_divContext)_localctx).v =  new BinaryArithmeticExpression("%", ((Mul_divContext)_localctx).l.v, ((Mul_divContext)_localctx).unary_ar.v); 
						}
						break;
					}
					} 
				}
				setState(134);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Unary_arContext extends ParserRuleContext {
		public ArithmeticExpression v;
		public Add_subContext add_sub;
		public Token NAME;
		public Token NUM;
		public TerminalNode LPAR() { return getToken(FProgramParser.LPAR, 0); }
		public List<Add_subContext> add_sub() {
			return getRuleContexts(Add_subContext.class);
		}
		public Add_subContext add_sub(int i) {
			return getRuleContext(Add_subContext.class,i);
		}
		public TerminalNode RPAR() { return getToken(FProgramParser.RPAR, 0); }
		public TerminalNode NAME() { return getToken(FProgramParser.NAME, 0); }
		public List<TerminalNode> COMMA() { return getTokens(FProgramParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FProgramParser.COMMA, i);
		}
		public TerminalNode NUM() { return getToken(FProgramParser.NUM, 0); }
		public Unary_arContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unary_ar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FProgramListener ) ((FProgramListener)listener).enterUnary_ar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FProgramListener ) ((FProgramListener)listener).exitUnary_ar(this);
		}
	}

	public final Unary_arContext unary_ar() throws RecognitionException {
		Unary_arContext _localctx = new Unary_arContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_unary_ar);
		int _la;
		try {
			setState(161);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				match(LPAR);
				setState(136);
				((Unary_arContext)_localctx).add_sub = add_sub(0);
				setState(137);
				match(RPAR);
				 ((Unary_arContext)_localctx).v =  ((Unary_arContext)_localctx).add_sub.v; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				((Unary_arContext)_localctx).NAME = match(NAME);
				 ((Unary_arContext)_localctx).v =  new Variable((((Unary_arContext)_localctx).NAME!=null?((Unary_arContext)_localctx).NAME.getText():null)); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(142);
				((Unary_arContext)_localctx).NAME = match(NAME);
				 List<ArithmeticExpression> ae = new ArrayList(); 
				setState(144);
				match(LPAR);
				setState(145);
				((Unary_arContext)_localctx).add_sub = add_sub(0);
				 ae.add(((Unary_arContext)_localctx).add_sub.v); 
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(147);
					match(COMMA);
					setState(148);
					((Unary_arContext)_localctx).add_sub = add_sub(0);
					 ae.add(((Unary_arContext)_localctx).add_sub.v); 
					}
					}
					setState(155);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(156);
				match(RPAR);
				 ((Unary_arContext)_localctx).v =  new Func((((Unary_arContext)_localctx).NAME!=null?((Unary_arContext)_localctx).NAME.getText():null), ae); 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(159);
				((Unary_arContext)_localctx).NUM = match(NUM);
				 ((Unary_arContext)_localctx).v =  new Num((((Unary_arContext)_localctx).NUM!=null?((Unary_arContext)_localctx).NUM.getText():null)); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrContext extends ParserRuleContext {
		public LogicExpression v;
		public OrContext l;
		public AndContext and;
		public AndContext and() {
			return getRuleContext(AndContext.class,0);
		}
		public TerminalNode OR() { return getToken(FProgramParser.OR, 0); }
		public OrContext or() {
			return getRuleContext(OrContext.class,0);
		}
		public OrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_or; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FProgramListener ) ((FProgramListener)listener).enterOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FProgramListener ) ((FProgramListener)listener).exitOr(this);
		}
	}

	public final OrContext or() throws RecognitionException {
		return or(0);
	}
